src/scss/index.scss
/* ... */
.menu-container {
    margin-top: 1rem;
    margin-right: 2rem;
    position: absolute;
    left: 1rem;
    width: calc(#{$burger-dimensions} * 1.5);
    height: calc(#{$burger-dimensions} * 1.5);

    .menu {
        position: fixed;
        top: 0;
        height: 2000px;
        min-height: 100vh;
        opacity: 1;
        left: 0;
        min-width: $menu-width;
        max-width: 500px;
        width: 15vw;
        transition: right 400ms ease-out, opacity 500ms ease;
        display: flex;
        justify-content: flex-end;
        align-items: flex-start;
        background-color: $darkmode-bg-color;
        clip-path: polygon(0 0, 100% 0, 60% 100%, 0% 100%);
        z-index: 1;

        #darkmode-container {
            position: absolute;
            top: 20px;
            width: 100%;
            right: 0;
            padding-right: 15%;
            height: 30px;
            display: flex;
            justify-content: flex-end;
            align-items: center;
            color: white;

            #darkmode-toggler {
                width: 30px;
                height: 20px;
                display: flex;
                align-items: center;
                border: 1px solid white;
                border-radius: 10px;
                cursor: pointer;
                    
                div {
                    width: 14px;
                    height: 14px;
                    margin: 0 2px;
                    margin-left: 2px;
                    border-radius: 7px;
                    background: rgb(230,230,230);
                    transition: margin 150ms ease-in;
                }
            }
        }

        ul {
            margin-top: 20vh;
            margin-right: 25%;
            list-style: none;
            font-size: 1rem;
            transform: rotate(4deg);
            display: flex;
            flex-direction: column;
            align-items: flex-end;
            width: 100%;

            .link {
                position: relative;
                transform: rotate(-4deg);
                margin-bottom: 2.5rem;
                cursor: pointer;
                font-family: 'Montserrat', sans-serif;
                font-weight: 800;
                text-decoration: none;
                color: white;
                transition: margin-right 200ms ease-in-out;

                &:hover {
                    text-shadow: 0 0 12px white;

                    &::before {
                        position: absolute;
                        left: -20px;
                        top: 0;
                        height: 100%;
                        width: 20px;
                        content: '‣';
                    }
                }
            }

            .active-link {
                color: $highlightFont;
                text-shadow: 0 0 4px $highlightFont;
                &:hover {
                    text-shadow: 0 0 4px $highlightFont;
                    // text-decoration: none;
                    &::before {
                        display: none;
                    }
                }
            }
        }
    }

    .menu-toggler {
        position: absolute;
        width: 100%;
        height: 100%;
        opacity: 0;
        display: none;
        z-index: 10;

        &:checked {
            & + .burger-menu div {
                background-color: white;
                transform: rotate(225deg);
                &::after {
                    background-color: white;
                    top: 0;
                    transform: rotate(90deg);
                }

                &::before {
                    top: 0;
                    background-color: white;
                }
            }

            & ~ .menu {
                right: 0;
                opacity: 1;
            }
        }
    }
    
    .burger-menu {
        display: none;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        justify-content: center;
        align-items: center;
        z-index: 5;
        
        div {
           width: 80%;
           height: 7px;
           background-color: black;
           position: relative;
           transition: transform 400ms ease-in-out;
           
           &::before, &::after {
                content: '';
                position: absolute;
                width: 100%;
                height: 7px;
                background-color: black;
                transition: background-color 2s ease;
            }
            
            &::before {
                top: -15px;
           }

           &::after {
               bottom: -15px;
           }
        }
    }
}

.main {
    position: relative;
    min-height: 100vh;
    width: calc(100vw - ((#{$menu-width} + 15vw) / 2));
    margin-left: calc((#{$menu-width} + 15vw) / 2);
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    .scrollToTop {
        display: flex;
        flex-direction: column;
        align-items: center;
        cursor: pointer;
    }
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 100%;
    margin-top: calc(#{$contactHeight} * 1.4);
    padding-top: calc(#{$contactHeight} * 1.2);
    overflow-x: hidden;

    & > .text-content {
        width: 70%;
        display: flex;
        flex-direction: column;

        h1, h2, p {
            align-self: flex-start;
        }

        p {
            margin-top: 1rem;
        }

        ul {
            margin: 0;
        }
        &:last-child {
            padding-bottom: 3rem;
        }
    }
}
/* ... */

